Moved div.box styles from cashier Attempt to fix some overflow issues caused by validation messages Factored out schizophrenic code from setupNewItem() into _addItemFromInputLine() Check for undefined value in generic template

--- a/omod/src/main/webapp/resources/css/style.css
+++ b/omod/src/main/webapp/resources/css/style.css
@@ -12,6 +12,9 @@ ul.floating li {
 	float: left;
 }
 
+div.box, div.combineBoxes { margin-bottom: 1em; }
+.combineBoxes div.box { margin-bottom: 0; }
+
 /* General form styles */
 /* Table styles */
 table.form td { padding-right: 20px; }
